[tool.poetry]
name = "repl-nix-privacypolicyscraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
trafilatura = "^1.12.1"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
gspread = "5.10.0"
gspread-pandas = "3.3.0"
pandas = "^2.2.2"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.144.0"
google-auth = "^2.34.0"
google-auth-oauthlib = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
